--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
                         <artifactId>jruby-complete</artifactId>
                         <version>${jruby.version}</version>
                     </dependency>
+
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.9</version>
+                    </dependency>
                     <!-- Uncomment the following element to override the version of AsciidoctorJ -->
                     <!--
                     <dependency>
@@ -119,7 +125,7 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
-                            <backend>html5</backend>
+                            <backend>pdf</backend>
                             <attributes>
                                 <imagesdir>./images</imagesdir>
                                 <toc>left</toc>
