--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,18 @@
 		<maven.compiler.source>${javaVersion}</maven.compiler.source>
 		<maven.compiler.target>${javaVersion}</maven.compiler.target>
 		<asciidoctorMavenPluginVersion>1.5.2.1</asciidoctorMavenPluginVersion>
-
-		<asciidoctor.maven.plugin.version>1.5.2.1</asciidoctor.maven.plugin.version>
-		<jruby.version>1.7.20.1</jruby.version>
+		<jrubyVersion>1.7.20.1</jrubyVersion>
+  		<github.global.server>github</github.global.server>
 	</properties>
 	<!-- end::timings[] -->
+	<scm>
+		<connection>scm:git:git://github.com/alexandrenavarro/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/alexandrenavarro/${project.artifactId}.git</developerConnection>
+		<url>https://github.com/alexandrenavarro/${project.artifactId}.git</url>
+	</scm>
 	<repositories>
+		<!--repository> <snapshots> <enabled>false</enabled> </snapshots> <id>jcenter</id> 
+			<name>bintray</name> <url>http://jcenter.bintray.com</url> </repository -->
 		<repository>
 			<id>rubygems-proxy-releases</id>
 			<name>RubyGems.org Proxy (Releases)</name>
@@ -34,9 +40,8 @@
 		<dependency>
 			<groupId>rubygems</groupId>
 			<artifactId>asciidoctor-diagram</artifactId>
-			<version>1.2.1</version>
+			<version>1.3.0</version>
 			<type>gem</type>
-			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>rubygems</groupId>
@@ -44,14 +49,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<defaultGoal>process-resources</defaultGoal>
@@ -61,7 +64,6 @@
 				<artifactId>gem-maven-plugin</artifactId>
 				<version>1.0.10</version>
 				<configuration>
-					<!-- align JRuby version with AsciidoctorJ to avoid redundant downloading -->
 					<jrubyVersion>1.7.9</jrubyVersion>
 					<gemHome>${project.build.directory}/gems</gemHome>
 					<gemPath>${project.build.directory}/gems</gemPath>
@@ -77,39 +79,30 @@
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
 				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>${asciidoctor.maven.plugin.version}</version>
+				<version>${asciidoctorMavenPluginVersion}</version>
 				<dependencies>
-					<!-- Comment this section to use the default jruby artifact provided 
-						by the plugin -->
 					<dependency>
 						<groupId>org.jruby</groupId>
 						<artifactId>jruby-complete</artifactId>
-						<version>${jruby.version}</version>
+						<version>${jrubyVersion}</version>
 					</dependency>
-
 					<dependency>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctorj-pdf</artifactId>
 						<version>1.5.0-alpha.9</version>
 					</dependency>
-					<!-- Uncomment the following element to override the version of AsciidoctorJ -->
-					<!-- <dependency> <groupId>org.asciidoctor</groupId> <artifactId>asciidoctorj</artifactId> 
-						<version>1.5.3-SNAPSHOT</version> </dependency> -->
+					<dependency>
+						<groupId>com.github.allati.asciidoctor.monotree</groupId>
+						<artifactId>asciidoctor-extension-monotree</artifactId>
+						<version>0.0.1</version>
+					</dependency>
 				</dependencies>
 				<configuration>
 					<sourceDirectory>src/site/asciidoc</sourceDirectory>
-					<!-- The gem-maven-plugin appends the scope (e.g., provided) to the 
-						gemPath defined in the plugin configuration -->
 					<gemPath>${project.build.directory}/gems-provided</gemPath>
 					<requires>
 						<require>asciidoctor-diagram</require>
 					</requires>
-					<attributes>
-						<!-- Example below shows how to specify in this pom instead of System's 
-							PATH, the location of dot command of Graphviz, required by PlantUML libraries -->
-						<!-- Windows: <graphvizdot>C:\Program Files (x86)\Graphviz2.38\bin\dot.exe</graphvizdot> -->
-						<!-- *nix : <graphvizdot>/usr/local/bin/dot</graphvizdot> -->
-					</attributes>
 				</configuration>
 				<executions>
 					<execution>
@@ -122,7 +115,8 @@
 							<backend>html</backend>
 							<attributes>
 								<imagesdir>./images</imagesdir>
-								<toc>left</toc>
+								<toc>autoy
+								</toc>
 								<icons>font</icons>
 								<sectanchors>true</sectanchors>
 								<idprefix />
@@ -161,8 +155,106 @@
 						<artifactId>asciidoctor-maven-plugin</artifactId>
 						<version>1.5.2.1</version>
 					</dependency>
+					<dependency>
+						<groupId>org.jruby</groupId>
+						<artifactId>jruby-complete</artifactId>
+						<version>${jrubyVersion}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctorj-pdf</artifactId>
+						<version>1.5.0-alpha.9</version>
+					</dependency>
+					<dependency>
+						<groupId>com.github.allati.asciidoctor.monotree</groupId>
+						<artifactId>asciidoctor-extension-monotree</artifactId>
+						<version>0.0.1</version>
+					</dependency>
+					<!--dependency>
+						<groupId>rubygems</groupId>
+						<artifactId>asciidoctor-diagram</artifactId>
+						<version>1.3.0</version>
+						<type>gem</type>
+					</dependency-->
 				</dependencies>
+
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.12</version>
+				<configuration>
+					<message>Creating site for ${project.version}</message>
+					<repositoryName>asciidoc-sample</repositoryName>
+					<repositoryOwner>alexandrenavarro</repositoryOwner>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.asciidoctor
+										</groupId>
+										<artifactId>
+											asciidoctor-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.5.2.1,)
+										</versionRange>
+										<goals>
+											<goal>
+												process-asciidoc
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											de.saumya.mojo
+										</groupId>
+										<artifactId>
+											gem-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.0.10,)
+										</versionRange>
+										<goals>
+											<goal>initialize</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
